--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11053,3 +11053,450 @@
   year          = {2016},
   publisher     = {Nature Publishing Group}
 }
+
+@incollection{Bla51,
+  title = {Comparison of {Experiments}},
+  isbn = {9780520411586},
+  booktitle = {Proceedings of the {Second} {Berkeley} {Symposium} on {Mathematical} {Statistics} and {Probability}},
+  publisher = {University of California Press},
+  author = {Blackwell, David},
+  editor = {Neyman, Jerzy},
+  month = dec,
+  year = {1951},
+  doi = {10.1525/9780520411586-009},
+  pages = {93--102},
+}
+
+@article{lecuyer2021practical,
+  title={Practical privacy filters and odometers with R$\backslash$'enyi differential privacy and applications to differentially private deep learning},
+  author={L{\'e}cuyer, Mathias},
+  journal={arXiv preprint arXiv:2103.01379},
+  year={2021}
+}
+
+@book{elaydi2005introduction,
+  title={An introduction to difference equations},
+  author={Elaydi, Saber},
+  year={2005},
+  publisher={Springer}
+}
+
+@inproceedings{dwork2006calibrating,
+  title={Calibrating noise to sensitivity in private data analysis},
+  author={Dwork, Cynthia and McSherry, Frank and Nissim, Kobbi and Smith, Adam},
+  booktitle={Theory of cryptography conference},
+  year={2006},
+}
+
+@misc{opendp-registry,
+  title = {{Differential Privacy Deployments Registry}},
+  author = {{OpenDP}},
+  howpublished = {\url{https://registry.opendp.org/}},
+  year=2025,
+  note = {Accessed: 2026-01-12}
+}
+
+@article{sinha2025vaultgemma,
+  title={VaultGemma: A Differentially Private Gemma Model},
+  author={Sinha, Amer and Mesnard, Thomas and McKenna, Ryan and Liu, Daogao and Choquette-Choo, Christopher A and Huang, Yangsibo and Yu, Da and Kaissis, George and Charles, Zachary and Liu, Ruibo and others},
+  journal={arXiv preprint arXiv:2510.15001},
+  year={2025}
+}
+
+@inproceedings{kairouz2021practical,
+  title={Practical and private (deep) learning without sampling or shuffling},
+  author={Kairouz, Peter and McMahan, Brendan and Song, Shuang and Thakkar, Om and Thakurta, Abhradeep and Xu, Zheng},
+  booktitle={International Conference on Machine Learning},
+  year={2021},
+  organization={PMLR}
+}
+
+@article{rogers2020linkedin,
+  title={Linkedin's audience engagements api: A privacy preserving data analytics system at scale},
+  author={Rogers, Ryan and Subramaniam, Subbu and Peng, Sean and Durfee, David and Lee, Seunghyun and Kancha, Santosh Kumar and Sahay, Shraddha and Ahammad, Parvez},
+  journal={arXiv preprint arXiv:2002.05839},
+  year={2020}
+}
+
+@misc{apple-emoji,
+  title = {{Differential Privacy Deployments Registry}},
+  author = {{Apple}},
+  howpublished = {\url{https://docs-assets.developer.apple.com/ml-research/papers/learning-with-privacy-at-scale.pdf/}},
+  year=2017,
+}
+
+@article{ding2017collecting,
+  title={Collecting telemetry data privately},
+  author={Ding, Bolin and Kulkarni, Janardhan and Yekhanin, Sergey},
+  journal={Advances in Neural Information Processing Systems},
+  year={2017}
+}
+
+@article{adeleye2023publishing,
+  title={Publishing Wikipedia usage data with strong privacy guarantees},
+  author={Adeleye, Temilola and Berghel, Skye and Desfontaines, Damien and Hay, Michael and Johnson, Isaac and Lemoisson, Cl{\'e}o and Machanavajjhala, Ashwin and Magerlein, Tom and Modena, Gabriele and Pujol, David and others},
+  journal={arXiv preprint arXiv:2308.16298},
+  year={2023}
+}
+
+@article{abowd20222020,
+  title={The 2020 census disclosure avoidance system topdown algorithm},
+  author={Abowd, John M and Ashmead, Robert and Cumings-Menon, Ryan and Garfinkel, Simson and Heineck, Micah and Heiss, Christine and Johns, Robert and Kifer, Daniel and Leclerc, Philip and Machanavajjhala, Ashwin and others},
+  journal={Harvard Data Science Review},
+  year={2022},
+  publisher={The MIT Press}
+}
+
+@article{ghazi2025differential,
+  title={On the Differential Privacy and Interactivity of Privacy Sandbox Reports},
+  author={Ghazi, Badih and Harrison, Charlie and Hosabettu, Arpana and Kamath, Pritish and Knop, Alexander and Kumar, Ravi and Leeman, Ethan and Manurangsi, Pasin and Raykova, Mariana and Sahu, Vikas and others},
+  journal={Proceedings on Privacy Enhancing Technologies},
+  year={2025}
+}
+
+@inproceedings{tholoniat2024cookie,
+  title={Cookie Monster: Efficient On-Device Budgeting for Differentially-Private Ad-Measurement Systems},
+  author={Tholoniat, Pierre and Kostopoulou, Kelly and McNeely, Peter and Sodhi, Prabhpreet Singh and Varanasi, Anirudh and Case, Benjamin and Cidon, Asaf and Geambasu, Roxana and L{\'e}cuyer, Mathias},
+  booktitle={Proceedings of the ACM SIGOPS 30th Symposium on Operating Systems Principles},
+  year={2024}
+}
+
+@software{jax-privacy2022github,
+ author = {Balle, Borja and Berrada, Leonard and Charles, Zachary and
+Choquette-Choo, Christopher A and De, Soham and Doroshenko, Vadym and Dvijotham,
+Dj and Galen, Andrew and Ganesh, Arun and Ghalebikesabi, Sahra and Hayes, Jamie
+and Kairouz, Peter and McKenna, Ryan and McMahan, Brendan and Pappu, Aneesh and
+Ponomareva, Natalia and Pravilov, Mikhail and Rush, Keith and Smith, Samuel L
+and Stanforth, Robert},
+  title = {{JAX}-{P}rivacy: Algorithms for Privacy-Preserving Machine Learning in JAX},
+  url = {http://github.com/google-deepmind/jax_privacy},
+  version = {0.4.0},
+  year = {2025},
+}
+
+@article{wilson2020differentially,
+  title={Differentially Private SQL with Bounded User Contribution},
+  author={Wilson, Royce J and Zhang, Celia Yuxin and Lam, William and Desfontaines, Damien and Simmons-Marengo, Daniel and Gipson, Bryant},
+  journal={Proceedings on Privacy Enhancing Technologies},
+  year={2020}
+}
+
+@article{gaboardi2020programming,
+  title={A programming framework for opendp},
+  author={Gaboardi, Marco and Hay, Michael and Vadhan, Salil},
+  journal={Manuscript, May},
+  year={2020}
+}
+
+@inproceedings{dwork2015robust,
+  title={Robust traceability from trace amounts},
+  author={Dwork, Cynthia and Smith, Adam and Steinke, Thomas and Ullman, Jonathan and Vadhan, Salil},
+  booktitle={2015 IEEE 56th Annual Symposium on Foundations of Computer Science},
+  year={2015},
+}
+@inproceedings{carlini2022membership,
+  title={Membership inference attacks from first principles},
+  author={Carlini, Nicholas and Chien, Steve and Nasr, Milad and Song, Shuang and Terzis, Andreas and Tramer, Florian},
+  booktitle={2022 IEEE symposium on security and privacy (SP)},
+  year={2022},
+}
+@article{homer2008resolving,
+  title={Resolving individuals contributing trace amounts of DNA to highly complex mixtures using high-density SNP genotyping microarrays},
+  author={Homer, Nils and Szelinger, Szabolcs and Redman, Margot and Duggan, David and Tembe, Waibhav and Muehling, Jill and Pearson, John V and Stephan, Dietrich A and Nelson, Stanley F and Craig, David W},
+  journal={PLoS genetics},
+  year={2008},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{dick2023confidence,
+  title={Confidence-ranked reconstruction of census microdata from published statistics},
+  author={Dick, Travis and Dwork, Cynthia and Kearns, Michael and Liu, Terrance and Roth, Aaron and Vietri, Giuseppe and Wu, Zhiwei Steven},
+  journal={Proceedings of the National Academy of Sciences},
+  year={2023},
+  publisher={National Academy of Sciences}
+}
+@inproceedings{balle2022reconstructing,
+  title={Reconstructing training data with informed adversaries},
+  author={Balle, Borja and Cherubin, Giovanni and Hayes, Jamie},
+  booktitle={2022 IEEE Symposium on Security and Privacy (SP)},
+  year={2022},
+  organization={IEEE}
+}
+@inproceedings{dwork2007price,
+  title={The price of privacy and the limits of LP decoding},
+  author={Dwork, Cynthia and McSherry, Frank and Talwar, Kunal},
+  booktitle={Proceedings of the thirty-ninth annual ACM symposium on Theory of computing},
+  year={2007}
+}
+@inproceedings{dinur2003revealing,
+  title={Revealing information while preserving privacy},
+  author={Dinur, Irit and Nissim, Kobbi},
+  booktitle={Proceedings of the twenty-second ACM SIGMOD-SIGACT-SIGART symposium on Principles of database systems},
+  year={2003}
+}
+@inproceedings{carlini2021extracting,
+  title={Extracting training data from large language models},
+  author={Carlini, Nicholas and Tramer, Florian and Wallace, Eric and Jagielski, Matthew and Herbert-Voss, Ariel and Lee, Katherine and Roberts, Adam and Brown, Tom and Song, Dawn and Erlingsson, Ulfar and others},
+  booktitle={30th USENIX security symposium (USENIX Security 21)},
+  pages={2633--2650},
+  year={2021}
+}
+@article{nasr2023scalable,
+  title={Scalable extraction of training data from (production) language models},
+  author={Nasr, Milad and Carlini, Nicholas and Hayase, Jonathan and Jagielski, Matthew and Cooper, A Feder and Ippolito, Daphne and Choquette-Choo, Christopher A and Wallace, Eric and Tram{\`e}r, Florian and Lee, Katherine},
+  journal={arXiv preprint arXiv:2311.17035},
+  year={2023}
+}
+
+@inproceedings{dwork2006our,
+  title={Our data, ourselves: Privacy via distributed noise generation},
+  author={Dwork, Cynthia and Kenthapadi, Krishnaram and McSherry, Frank and Mironov, Ilya and Naor, Moni},
+  booktitle={Annual international conference on the theory and applications of cryptographic techniques},
+  year={2006},
+  organization={Springer}
+}
+@inproceedings{mironov2017renyi,
+  title={R{\'e}nyi differential privacy},
+  author={Mironov, Ilya},
+  booktitle={2017 IEEE 30th computer security foundations symposium (CSF)},
+  year={2017},
+  organization={IEEE}
+}
+@article{dwork2016concentrated,
+  title={Concentrated differential privacy},
+  author={Dwork, Cynthia and Rothblum, Guy N},
+  journal={arXiv preprint arXiv:1603.01887},
+  year={2016}
+}
+@inproceedings{bun2016concentrated,
+  title={Concentrated differential privacy: Simplifications, extensions, and lower bounds},
+  author={Bun, Mark and Steinke, Thomas},
+  booktitle={Theory of cryptography conference},
+  year={2016},
+  organization={Springer}
+}
+@article{dong2022gaussian,
+  title={Gaussian differential privacy},
+  author={Dong, Jinshuo and Roth, Aaron and Su, Weijie J},
+  journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  year={2022},
+  publisher={Oxford University Press}
+}
+@article{sommer2019privacy,
+  title={Privacy Loss Classes: The Central Limit Theorem in Differential Privacy},
+  author={Sommer, David M and Meiser, Sebastian and Mohammadi, Esfandiar},
+  journal={Proceedings on Privacy Enhancing Technologies},
+  year={2019}
+}
+@inproceedings{koskela2020computing,
+  title={Computing tight differential privacy guarantees using fft},
+  author={Koskela, Antti and J{\"a}lk{\"o}, Joonas and Honkela, Antti},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  year={2020},
+}
+
+@article{gopi2021numerical,
+  title={Numerical composition of differential privacy},
+  author={Gopi, Sivakanth and Lee, Yin Tat and Wutschitz, Lukas},
+  journal={Advances in Neural Information Processing Systems},
+  year={2021}
+}
+
+@inproceedings{vadhan2021concurrent,
+  title={Concurrent composition of differential privacy},
+  author={Vadhan, Salil and Wang, Tianhao},
+  booktitle={Theory of Cryptography Conference},
+  year={2021},
+  organization={Springer}
+}
+
+@inproceedings{dwork2009complexity,
+  title={On the complexity of differentially private data release: efficient algorithms and hardness results},
+  author={Dwork, Cynthia and Naor, Moni and Reingold, Omer and Rothblum, Guy N and Vadhan, Salil},
+  booktitle={Proceedings of the forty-first annual ACM symposium on Theory of computing},
+  year={2009}
+}
+
+@inproceedings{kostopoulou2023turbo,
+  title={Turbo: Effective caching in differentially-private databases},
+  author={Kostopoulou, Kelly and Tholoniat, Pierre and Cidon, Asaf and Geambasu, Roxana and L{\'e}cuyer, Mathias},
+  booktitle={Proceedings of the 29th Symposium on Operating Systems Principles},
+  year={2023}
+}
+
+@inproceedings{lecuyer2019privacy,
+  title={Privacy accounting and quality control in the sage differentially private ML platform},
+  author={L{\'e}cuyer, Mathias and Spahn, Riley and Vodrahalli, Kiran and Geambasu, Roxana and Hsu, Daniel},
+  booktitle={Proceedings of the 27th ACM Symposium on Operating Systems Principles},
+  year={2019}
+}
+
+@inproceedings{kuchler2024cohere,
+  title={Cohere: Managing differential privacy in large scale systems},
+  author={K{\"u}chler, Nicolas and Opel, Emanuel and Lycklama, Hidde and Viand, Alexander and Hithnawi, Anwar},
+  booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
+  year={2024},
+  organization={IEEE}
+}
+
+@article{ebadi2015differential,
+  title={Differential privacy: Now it's getting personal},
+  author={Ebadi, Hamid and Sands, David and Schneider, Gerardo},
+  journal={Acm Sigplan Notices},
+  year={2015},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{feldman2021individual,
+  title={Individual privacy accounting via a renyi filter},
+  author={Feldman, Vitaly and Zrnic, Tijana},
+  journal={Advances in Neural Information Processing Systems},
+  year={2021}
+}
+
+@article{yu2022individual,
+  title={Individual privacy accounting for differentially private stochastic gradient descent},
+  author={Yu, Da and Kamath, Gautam and Kulkarni, Janardhan and Liu, Tie-Yan and Yin, Jian and Zhang, Huishuai},
+  journal={arXiv preprint arXiv:2206.02617},
+  year={2022}
+}
+
+@inproceedings{haney2023concurrent,
+  title={Concurrent composition for interactive differential privacy with adaptive privacy-loss parameters},
+  author={Haney, Samuel and Shoemate, Michael and Tian, Grace and Vadhan, Salil and Vyrros, Andrew and Xu, Vicki and Zhang, Wanrong},
+  booktitle={Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security},
+  year={2023}
+}
+
+@inproceedings{vadhan2023concurrent,
+  title={Concurrent composition theorems for differential privacy},
+  author={Vadhan, Salil and Zhang, Wanrong},
+  booktitle={Proceedings of the 55th Annual ACM Symposium on Theory of Computing},
+  year={2023}
+}
+
+@article{lyu2022composition,
+  title={Composition theorems for interactive differential privacy},
+  author={Lyu, Xin},
+  journal={Advances in Neural Information Processing Systems},
+  year={2022}
+}
+
+@inproceedings{murtagh2015complexity,
+  title={The complexity of computing the optimal composition of differential privacy},
+  author={Murtagh, Jack and Vadhan, Salil},
+  booktitle={Theory of Cryptography Conference},
+  pages={157--175},
+  year={2015},
+  organization={Springer}
+}
+
+@inproceedings{kairouz2015composition,
+  title={The composition theorem for differential privacy},
+  author={Kairouz, Peter and Oh, Sewoong and Viswanath, Pramod},
+  booktitle={International conference on machine learning},
+  pages={1376--1385},
+  year={2015},
+  organization={PMLR}
+}
+@unpublished{DRS19,
+  ids = {DRS19a,dong2019gaussian},
+  title = {Gaussian {{Differential Privacy}}},
+  author = {Dong, Jinshuo and Roth, Aaron and Su, Weijie J.},
+  date = {2019-05-30},
+  eprint = {1905.02383},
+  eprinttype = {arXiv},
+  eprintclass = {cs, stat},
+  url = {http://arxiv.org/abs/1905.02383},
+  urldate = {2020-08-04},
+  abstract = {In the past decade, differential privacy has seen remarkable success as a rigorous and practical formalization of data privacy. This privacy definition and its divergence based relaxations, however, have several acknowledged weaknesses, either in handling composition of private algorithms or in analyzing important primitives like privacy amplification by subsampling. Inspired by the hypothesis testing formulation of privacy, this paper proposes a new relaxation of differential privacy, which we term ``f -differential privacy'' (f -DP). This notion of privacy has a number of appealing properties and, in particular, avoids difficulties associated with divergence based relaxations. First, f -DP faithfully preserves the hypothesis testing interpretation of differential privacy, thereby making the privacy guarantees easily interpretable. In addition, f -DP allows for lossless reasoning about composition in an algebraic fashion. Moreover, we provide a powerful technique to import existing results proven for the original differential privacy definition to f -DP and, as an application of this technique, obtain a simple and easy-to-interpret theorem of privacy amplification by subsampling for f -DP.},
+  langid = {english},
+  keywords = {Computer Science - Cryptography and Security,Computer Science - Data Structures and Algorithms,Computer Science - Machine Learning,Statistics - Machine Learning}
+}
+
+@article{DRS22,
+  ids = {dong2022gaussian},
+  title = {Gaussian {{Differential Privacy}}},
+  author = {Dong, Jinshuo and Roth, Aaron and Su, Weijie J.},
+  date = {2022-02-01},
+  journaltitle = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  shortjournal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume = {84},
+  number = {1},
+  pages = {3--37},
+  issn = {1369-7412},
+  doi = {10.1111/rssb.12454},
+  url = {https://doi.org/10.1111/rssb.12454},
+  urldate = {2023-11-15},
+  abstract = {In the past decade, differential privacy has seen remarkable success as a rigorous and practical formalization of data privacy. This privacy definition and its divergence based relaxations, however, have several acknowledged weaknesses, either in handling composition of private algorithms or in analysing important primitives like privacy amplification by subsampling. Inspired by the hypothesis testing formulation of privacy, this paper proposes a new relaxation of differential privacy, which we term `f-differential privacy' (f-DP). This notion of privacy has a number of appealing properties and, in particular, avoids difficulties associated with divergence based relaxations. First, f-DP faithfully preserves the hypothesis testing interpretation of differential privacy, thereby making the privacy guarantees easily interpretable. In addition, f-DP allows for lossless reasoning about composition in an algebraic fashion. Moreover, we provide a powerful technique to import existing results proven for the original differential privacy definition to f-DP and, as an application of this technique, obtain a simple and easy-to-interpret theorem of privacy amplification by subsampling for f-DP. In addition to the above findings, we introduce a canonical single-parameter family of privacy notions within the f-DP class that is referred to as `Gaussian differential privacy' (GDP), defined based on hypothesis testing of two shifted Gaussian distributions. GDP is the focal privacy definition among the family of f-DP guarantees due to a central limit theorem for differential privacy that we prove. More precisely, the privacy guarantees of any hypothesis testing based definition of privacy (including the original differential privacy definition) converges to GDP in the limit under composition. We also prove a Berry--Esseen style version of the central limit theorem, which gives a computationally inexpensive tool for tractably analysing the exact composition of private algorithms. Taken together, this collection of attractive properties render f-DP a mathematically coherent, analytically tractable and versatile framework for private data analysis. Finally, we demonstrate the use of the tools we develop by giving an improved analysis of the privacy guarantees of noisy stochastic gradient descent.}
+}
+
+@inproceedings{FZ21,
+  ids = {feldman2021individual},
+  title = {Individual Privacy Accounting via a R\'enyi Filter},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Feldman, Vitaly and Zrnic, Tijana},
+  editor = {Ranzato, M. and Beygelzimer, A. and Dauphin, Y. and Liang, P.S. and Vaughan, J. Wortman},
+  date = {2021},
+  volume = {34},
+  pages = {28080--28091},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2021/file/ec7f346604f518906d35ef0492709f78-Paper.pdf}
+}
+
+@inproceedings{KTH22,
+  ids = {koskelaindividual},
+  title = {Individual {{Privacy Accounting}} with {{Gaussian Differential Privacy}}},
+  author = {Koskela, Antti and Tobaben, Marlon and Honkela, Antti},
+  date = {2022-09-29},
+  url = {https://openreview.net/forum?id=JmC_Tld3v-f},
+  urldate = {2025-10-24},
+  abstract = {Individual privacy accounting enables bounding differential privacy (DP) loss individually for each participant involved in the analysis. This can be informative as often the individual privacy losses are considerably smaller than those indicated by the DP bounds that are based on considering worst-case bounds at each data access. In order to account for the individual losses in a principled manner, we need a privacy accountant for adaptive compositions of mechanisms, where the loss incurred at a given data access is allowed to be smaller than the worst-case loss. This kind of analysis has been carried out for the R\'enyi differential privacy by Feldman and Zrnic (2021), however not yet for the so-called optimal privacy accountants. We make first steps in this direction by providing a careful analysis using the Gaussian differential privacy which gives optimal bounds for the Gaussian mechanism, one of the most versatile DP mechanisms. This approach is based on determining a certain supermartingale for the hockey-stick divergence and on extending the R\'enyi divergence-based fully adaptive composition results by Feldman and Zrnic (2021). We also consider measuring the individual \$(\textbackslash varepsilon,\textbackslash delta)\$-privacy losses using the so-called privacy loss distributions. Using the Blackwell theorem, we can then use the results of Feldman and Zrnic (2021) to construct an approximative individual \$(\textbackslash varepsilon,\textbackslash delta)\$-accountant. We also show how to speed up the FFT-based individual DP accounting using the Plancherel theorem.},
+  eventtitle = {The {{Eleventh International Conference}} on {{Learning Representations}}},
+  langid = {english}
+}
+
+@inproceedings{RRUV16,
+  ids = {filters_roger,rogers2016privacy},
+  title = {Privacy Odometers and Filters: {{Pay-as-you-go}} Composition},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Rogers, Ryan M and Roth, Aaron and Ullman, Jonathan and Vadhan, Salil},
+  editor = {Lee, D. and Sugiyama, M. and Luxburg, U. and Guyon, I. and Garnett, R.},
+  date = {2016},
+  volume = {29},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2016/file/58c54802a9fb9526cd0923353a34a7ae-Paper.pdf}
+}
+
+@online{ST22,
+  ids = {smith2022fullyadaptivecompositiongaussian},
+  title = {Fully {{Adaptive Composition}} for {{Gaussian Differential Privacy}}},
+  author = {Smith, Adam and Thakurta, Abhradeep},
+  date = {2022-10-31},
+  eprint = {2210.17520},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  url = {http://arxiv.org/abs/2210.17520},
+  urldate = {2022-11-13},
+  abstract = {We show that Gaussian Differential Privacy, a variant of differential privacy tailored to the analysis of Gaussian noise addition, composes gracefully even in the presence of a fully adaptive analyst. Such an analyst selects mechanisms (to be run on a sensitive data set) and their privacy budgets adaptively, that is, based on the answers from other mechanisms run previously on the same data set. In the language of Rogers, Roth, Ullman and Vadhan, this gives a filter for GDP with the same parameters as for nonadaptive composition.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Cryptography and Security,Computer Science - Machine Learning}
+}
+
+@inproceedings{WRRW23,
+  ids = {whitehouse2023fully},
+  title = {Fully-{{Adaptive Composition}} in {{Differential Privacy}}},
+  booktitle = {Proceedings of the 40th {{International Conference}} on {{Machine Learning}}},
+  author = {Whitehouse, Justin and Ramdas, Aaditya and Rogers, Ryan and Wu, Steven},
+  date = {2023-07-03},
+  pages = {36990--37007},
+  publisher = {PMLR},
+  issn = {2640-3498},
+  url = {https://proceedings.mlr.press/v202/whitehouse23a.html},
+  urldate = {2023-11-29},
+  abstract = {Composition is a key feature of differential privacy. Well-known advanced composition theorems allow one to query a private database quadratically more times than basic privacy composition would permit. However, these results require that the privacy parameters of all algorithms be fixed before interacting with the data. To address this, Rogers et al. introduced fully adaptive composition, wherein both algorithms and their privacy parameters can be selected adaptively. They defined two probabilistic objects to measure privacy in adaptive composition: privacy filters, which provide differential privacy guarantees for composed interactions, and privacy odometers, time-uniform bounds on privacy loss. There are substantial gaps between advanced composition and existing filters and odometers. First, existing filters place stronger assumptions on the algorithms being composed. Second, these odometers and filters suffer from large constants, making them impractical. We construct filters that match the rates of advanced composition, including constants, despite allowing for adaptively chosen privacy parameters. En route we also derive a privacy filter for approximate zCDP. We also construct several general families of odometers. These odometers match the tightness of advanced composition at an arbitrary, preselected point in time, or at all points in time simultaneously, up to a doubly-logarithmic factor. We obtain our results by leveraging advances in martingale concentration. In sum, we show that fully adaptive privacy is obtainable at almost no loss.},
+  eventtitle = {International {{Conference}} on {{Machine Learning}}},
+  langid = {english}
+}
+
