--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt,letterpaper]{article}
+% \documentclass[10pt, twocolumn]{article}
+\documentclass[10pt, letterpaper]{article}
 \usepackage[margin=1in]{geometry}
 \usepackage{setspace}
 \setstretch{1.0} % change line spacing
