--- a/sections/adversary_theory.tex
+++ b/sections/adversary_theory.tex
@@ -17,7 +17,7 @@ In this section we develop a general theory of the privacy characteristics of ad
 	the worst-case privacy loss of arbitrary $\Gamma$-adversaries.
 \end{definition}
 
-Crucially, notice that that no single adversary fully realizes the privacy cost of the rule $\Gamma$. Recalling the $f$-DP interpretation of the supremum (see \Cref{prop:sup-conv}), the privacy cost of the rule $\Gamma$ is in fact realized by a family of adversaries that minimize the false negative rate for every given confidence level. It turns out that the maximum privacy cost of the rule $\Gamma$ for a given confidence level occurs when the adversary first plays the best move for this confidence level, observes the outcome, then depending on the likelihood of having observed this outcome recursively chooses its remaining strategy tuned to maximize the overall privacy cost. Note that by $\lambda$ we mean the empty sequence.
+Crucially, notice that that no single adversary fully realizes the privacy cost of the rule $\Gamma$. The privacy cost of the rule $\Gamma$ is in fact realized by a family of adversaries that minimize the false negative rate for every given confidence level. It turns out that the maximum privacy cost of the rule $\Gamma$ for a given confidence level occurs when the adversary first plays the best move for this confidence level, observes the outcome, then depending on the likelihood of having observed this outcome recursively chooses its remaining strategy tuned to maximize the overall privacy cost. Note that by $\lambda$ we mean the empty sequence.
 
 \begin{lemma}
 	\label{lemma:restricted_adversary}
@@ -25,7 +25,7 @@ Crucially, notice that that no single adversary fully realizes the privacy cost 
 	\begin{align*}
 		\pld(\Gamma) = \sup\{L \oplus \pld(\Gamma_L) : L \in \Gamma(\lambda)\}
 	\end{align*}
-	where $\Gamma_{L_0}(L_1, \dots, L_{k'}) := \Gamma(L_0, L_1, \dots L_{k'})$ denotes the rule of length of $k - 1$ that fixes the first move played against $\Gamma$ to $L_0$.
+	where $\Gamma_{L_0}(L_1, \dots, L_{k'}) := \Gamma(L_0, L_1, \dots L_{k'})$ denotes the rule of length of $k - 1$ that fixes the first move to $L_0$.
 \end{lemma}
 
 % We prove the result by passing to hockey-stick curves because a pointwise supremum is easier to work with rather than the lower convex envelope. We will essentially show that a worst-case adversary first plays an optimal move with corresponding PLD $L$, observes the outcome $Y_1$, and adversarially chooses a followup in $\Adv(\Gamma_L)$ to ensure that the overall process ``traces out'' the hockey-stick curve of $L \oplus \Adv(\Gamma_L)$. See \Cref{app:restricted_adversary_proof} for the details.
